--- a/Tema3/NUM_Tema3NumerickeDerivovanie.ipynb
+++ b/Tema3/NUM_Tema3NumerickeDerivovanie.ipynb
@@ -738,10 +738,10 @@
     "Pre všetky $x$ z malého okolia $x_0$ predpokladajme, že platí $\\left|e(x)\\right|\\le\\varepsilon\\left|f(x)\\right|$ pre nejakú relatívnu chybu $\\varepsilon$; ďalej nech $\\left|f(x)\\right|\\le M_0$ pre nejakú konštantu $M_0$ a taktiež nech $\\left|f''(x)\\right|\\le M_2$ pre nejakú konštantu $M_2$. Zohľadnením zavedených ohraničení a opakovaným použitím trojuholníkovej nerovnosti dostávame \n",
     "\n",
     "\\begin{equation*} \\label{eq:error1} \\tag{8} \n",
-    "\\left|f'(x_0)-\\dfrac{\\tilde{f}(x_0+h)-\\tilde{f}(x_0)}{h}\\right|\\le\\left|\\dfrac{e(x_0+h)-e(x_0)}{h}\\right|+\\dfrac{h}{2}M_2\\le\\dfrac{2\\epsilon M_0}{h}+\\dfrac{hM_2}{2}=E(h),\n",
+    "\\left|f'(x_0)-\\dfrac{\\tilde{f}(x_0+h)-\\tilde{f}(x_0)}{h}\\right|\\le\\left|\\dfrac{e(x_0+h)-e(x_0)}{h}\\right|+\\dfrac{h}{2}M_2\\le\\dfrac{2\\varepsilon M_0}{h}+\\dfrac{hM_2}{2}=E(h),\n",
     "\\end{equation*} \n",
     "\n",
-    "kde $\\varepsilon$ je ľubovoľné číslo také, ktoré spĺňa $\\left|e(x)\\right|\\le\\varepsilon\\left|f(x)\\right|$ pre všetky uvažované $x$. To vlastne znamená, že chyba je ohraničená krivkou ako to ukazuje nasledujúci obrázok (ilustrácia hranice celkovej chyby, t. j. zaokrúhlenie + aproximácia resp. zanedbanie členov v doprednej diferenciácii). Z grafu je vidieť, že pre malé $h$ môže byť chyba veľká. \n",
+    "kde $\\varepsilon$ je ľubovoľné číslo také, ktoré spĺňa $\\left|e(x)\\right|\\le\\varepsilon\\left|f(x)\\right|$ pre všetky uvažované $x$. To vlastne znamená, že celková chyba $E(h)$ je ohraničená krivkou ako to ukazuje nasledujúci obrázok (ilustrácia hranice celkovej chyby, t. j. zaokrúhlenie + aproximácia resp. zanedbanie členov v doprednej diferenciácii). Z grafu je vidieť, že pre malé $h$ môže byť chyba veľká. \n",
     "\n",
     "![error1.PNG](attachment:error1.PNG) \n",
     "$$\\text{Zdroj: Ackleh et al. (2009).}$$ \n",
@@ -781,7 +781,7 @@
     "\n",
     "![ApproxDeriv.PNG](attachment:ApproxDeriv.PNG) \n",
     "\n",
-    "Všimnime si, že $f''(x)=-\\dfrac{1}{x^2}$ a $M_2=\\mathrm{max}\\,\\left|f''(\\xi)\\right|\\approx\\dfrac{1}{9}$. Podľa $(8)$ predpokladajme, že chyba je $\\dfrac{2\\varepsilon M_0}{h}+\\dfrac{hM_2}{2}$. Minimálna chyba nastáva pre $e'(h)=0$, čo dáva optimálne $h_{opt}\\approx\\sqrt{36\\varepsilon}$. Pri presnosti 10 platných číslic je $\\varepsilon\\approx5\\times10^{-10}$. Preto $h_{opt}\\approx10^{-4}$. \n"
+    "Všimnime si, že $f''(x)=-\\dfrac{1}{x^2}$ a $M_2=\\mathrm{max}\\,\\left|f''(\\xi)\\right|\\approx\\dfrac{1}{9}$. Podľa $(8)$ predpokladajme, že chyba $E(h)$ je $\\dfrac{2\\varepsilon M_0}{h}+\\dfrac{hM_2}{2}$. Minimálna chyba nastáva pre $E'(h)=0$, čo dáva optimálne $h_{opt}\\approx\\sqrt{36\\varepsilon}$. Pri presnosti 10 platných číslic je $\\varepsilon\\approx5\\times10^{-10}$. Preto $h_{opt}\\approx10^{-4}$. \n"
    ]
   },
   {
