--- a/Tema7/NUM_Tema7LinearneSystemy2.ipynb
+++ b/Tema7/NUM_Tema7LinearneSystemy2.ipynb
@@ -141,7 +141,7 @@
     "\n",
     "sú **_Jordanove bloky_**. Mimo hlavnej diagonály a prvej naddiagonály sú prvky matíc $\\mathbf{J}_i$ nulové. Dôkaz existencie rozkladu tu nebudeme uvádzať, keďže ide o tému, ktorá je náplňou jedného zo základných kurzov lineárnej algebry. \n",
     "\n",
-    "Keďže horná trojuholníková matica $\\mathbf{A}$ je [podobná](https://cs.wikipedia.org/wiki/Podobnost_matic) s maticou $\\mathbf{T}$, tak diagonálne prvky $\\lambda_i$ Jordanovych blokov $\\mathbf{J}_i$ sú vlastné čísla matice $\\mathbf{A}$. "
+    "Keďže horná trojuholníková matica $\\mathbf{J}$ je [podobná](https://cs.wikipedia.org/wiki/Podobnost_matic) s maticou $\\mathbf{A}$, tak diagonálne prvky $\\lambda_i$ Jordanovych blokov $\\mathbf{J}_i$ sú vlastné čísla matice $\\mathbf{A}$. "
    ]
   },
   {
@@ -172,14 +172,10 @@
     "* Veta 1 vlastne poskytuje nutnú i postačujúcu podmienku konvergencie matice: metóda prostej iterácie $(2)$ konverguje práve vtedy, keď $\\varrho(\\mathbf{T})<1$.\n",
     "\n",
     "\n",
-    "* Ak je $\\mathbf{x}$ vlastný vektor matice $\\mathbf{A}$, $\\lambda$ je prislúchajúce vlastné číslo, tzn. platí $\\mathbf{A}\\mathbf{x}=\\lambda\\mathbf{x}$, potom <br/> \n",
-    "<br/>\n",
+    "* Ak je $\\mathbf{x}$ vlastný vektor matice $\\mathbf{A}$, $\\lambda$ je prislúchajúce vlastné číslo, tzn. platí $\\mathbf{A}\\mathbf{x}=\\lambda\\mathbf{x}$, potom  \n",
     "$$|\\lambda|\\lVert\\mathbf{x}\\rVert=\\lVert\\mathbf{A}\\mathbf{x}\\rVert\\le\\lVert\\mathbf{A}\\rVert\\cdot\\lVert\\mathbf{x}\\rVert$$\n",
-    "<br/>\n",
-    "odkiaľ <br/>\n",
-    "<br/>\n",
+    "odkiaľ \n",
     "$$\\varrho(\\mathbf{A})\\le\\lVert\\mathbf{A}\\rVert.$$\n",
-    "<br/> \n",
     "Môžeme teda vysloviť **postačujúcu podmienku konvergencie**: Ak je $\\lVert\\mathbf{T}\\rVert<1$, tak metóda prostej iterácie $(2)$ konverguje. \n",
     "\n",
     "\n",
@@ -334,7 +330,7 @@
     "\n",
     "![o1.PNG](attachment:o1.PNG) \n",
     "\n",
-    "Najjednoduchší rozklad matice $\\mathbf{A}$ dostaneme pre $\\mathbf{M}=\\mathbf{D}$, $\\mathbf{N}=-(L+U)$. Metóda $(2)$ má potom tvar \n",
+    "Najjednoduchší rozklad matice $\\mathbf{A}$ dostaneme pre $\\mathbf{M}=\\mathbf{D}$, $\\mathbf{N}=-(\\mathbf{L}+\\mathbf{U})$. Metóda $(2)$ má potom tvar \n",
     "\n",
     "\\begin{align*}\\label{eq:Jacobi1} \\tag{6}\n",
     "\\mathbf{D}\\mathbf{x}_{k+1}=\\mathbf{b}-(\\mathbf{L}+\\mathbf{U})\\mathbf{x}_k \n",
@@ -574,7 +570,7 @@
     "\n",
     "### <font color=green> Veta 2 (Ostrowski-Reich) </font> \n",
     "\n",
-    "Ak $\\mathbf{A}$ je Hermitovská, pozitívne definitná matica, ktorej najmenšie vlastné vlastné číslo $\\sigma$ spĺňa $0<\\sigma<2$, potom SOR metóda konverguje pre ľubovoľný počiatočný vektor $\\mathbf{x}_0$.\n",
+    "Ak $\\mathbf{A}$ je Hermitovská, pozitívne definitná matica, ktorej najmenšie vlastné číslo $\\sigma$ spĺňa $0<\\sigma<2$, potom SOR metóda konverguje pre ľubovoľný počiatočný vektor $\\mathbf{x}_0$.\n",
     "\n",
     "---"
    ]
@@ -856,7 +852,7 @@
     "kde $\\mathbf{x}^*$ je riešenie sústavy $\\mathbf{A}\\mathbf{x}=\\mathbf{b}$.\n",
     "\n",
     "\n",
-    "* Nech $\\mathbf{A}$ je regulárna a $\\mathcal{L}=\\mathbf{A}\\mathcal{K}$. Potom vektor $\\tilde{\\mathbf{x}}$ je výsledkom šikmej projekcie na $\\mathcal{K}$ ortogonáne vzhľadom na $\\mathcal{L}$ s počiatočným vektorom $\\mathbf{x}_0$ práve vtedy, keď \n",
+    "* Nech $\\mathbf{A}$ je regulárna a $\\mathcal{L}=\\mathbf{A}\\mathcal{K}$. Potom vektor $\\tilde{\\mathbf{x}}$ je výsledkom šikmej projekcie na $\\mathcal{K}$ ortogonálne vzhľadom na $\\mathcal{L}$ s počiatočným vektorom $\\mathbf{x}_0$ práve vtedy, keď \n",
     "\n",
     "$$R(\\tilde{\\mathbf{x}})=\\underset{\\mathbf{x}\\in\\mathbf{x}_0+\\mathcal{K}}{\\min}\\, R(\\mathbf{x}), \\quad R(\\mathbf{x})=\\lVert\\mathbf{b}-\\mathbf{A}\\mathbf{x}\\rVert.$$\n",
     "\n",
@@ -2245,7 +2241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.10"
   },
   "varInspector": {
    "cols": {
