--- a/Tema9/NUM_Tema9Optimalizacia.ipynb
+++ b/Tema9/NUM_Tema9Optimalizacia.ipynb
@@ -2077,7 +2077,7 @@
     "Existujú však i lepšie optimalizačné metódy tohto typu - napr. **Broydenova-Fletcherova-Goldfarbova-Shannova metóda** **(BFGS metóda)**, kde kľúčový aktualizačný krok je daný vzťahom \n",
     "\n",
     "\\begin{align*}\\label{eq:Optim23} \\tag{23}\n",
-    "\\tilde{\\mathbf{H}}_{k+1}:=\\tilde{\\mathbf{H}}_k+\\dfrac{\\mathbf{y}\\mathbf{y}'}{\\mathbf{y}'\\mathbf{d}}-\\dfrac{\\mathbf{H}_k\\mathbf{d}\\mathbf{d}'\\mathbf{H}_k}{\\mathbf{d}'\\mathbf{H}_k\\mathbf{d}}, \n",
+    "\\tilde{\\mathbf{H}}_{k+1}:=\\tilde{\\mathbf{H}}_k+\\dfrac{\\mathbf{y}\\mathbf{y}'}{\\mathbf{y}'\\mathbf{d}}-\\dfrac{\\tilde{\\mathbf{H}}_k\\mathbf{d}\\mathbf{d}'\\tilde{\\mathbf{H}}_k}{\\mathbf{d}'\\tilde{\\mathbf{H}}_k\\mathbf{d}}, \n",
     "\\end{align*}\n",
     "\n",
     "kde $\\tilde{\\mathbf{H}}_k$ je $k$-ta aproximácia inverzie $\\left(\\mathbf{B}^{-1}_{k}\\right)$ BFGS aktualizačného kroku, pričom $\\mathbf{y}$ a $\\mathbf{d}$ sú dané vzťahom $(21)$. "
@@ -2552,7 +2552,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2566,7 +2566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.10"
   },
   "varInspector": {
    "cols": {
