--- a/Tema7/NUM_Tema7LinearneSystemy2.ipynb
+++ b/Tema7/NUM_Tema7LinearneSystemy2.ipynb
@@ -839,7 +839,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Iteračné metódy na riešenie SLR $\\mathbf{A}\\mathbf{x}=\\mathbf{b}$, ktoré budú ďalej prezentované, sa dajú chápať z geometrického hľadiska ako tzv. **_projekčné metódy_**. Všeobecná projekčná metóda hľadá aproximáciu $\\tilde{\\mathbf{x}}$ z afinného podpriestoru $\\mathbf{x}_0+\\mathcal{K}$ s dimenziou $m$ (kde $\\mathbf{x}_0$ je ľubovoľný počiatočný odhad), pričom má byť splnená _Petrovova-Galerkinova podmienka_ $\\mathbf{b}-\\mathbf{A}\\tilde{\\mathbf{x}} \\perp \\mathcal{L}$, kde $\\mathcal{L}$ je ďalší tzv. testovací podpriestor s dimenziou $m$. \n",
+    "Iteračné metódy na riešenie SLR $\\mathbf{A}\\mathbf{x}=\\mathbf{b}$, ktoré budú ďalej prezentované, sa dajú chápať z geometrického hľadiska ako tzv. [**_projekčné metódy_**](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/SubspaceMethods.pdf) a hlavná myšlienka je vysvetlená napr. [tu](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/SubspaceMethods.pdf). Všeobecná projekčná metóda hľadá aproximáciu $\\tilde{\\mathbf{x}}$ z afinného podpriestoru $\\mathbf{x}_0+\\mathcal{K}$ s dimenziou $m$ (kde $\\mathbf{x}_0$ je ľubovoľný počiatočný odhad), pričom má byť splnená _Petrovova-Galerkinova podmienka_ $\\mathbf{b}-\\mathbf{A}\\tilde{\\mathbf{x}} \\perp \\mathcal{L}$, kde $\\mathcal{L}$ je ďalší tzv. testovací podpriestor s dimenziou $m$. \n",
     "\n",
     "Nech $\\tilde{\\mathbf{x}}=\\mathbf{x}_0+\\boldsymbol{\\delta}$, $\\boldsymbol{\\delta}\\in\\mathcal{K}$ a počiatočné rezíduum $\\mathbf{r}_0=\\mathbf{b}-\\mathbf{A}\\mathbf{x}_0$. Potom Petrovova-Galerkinova podmienka má tvar $(\\mathbf{r}_0-\\mathbf{A}\\boldsymbol{\\delta},\\mathbf{w})=\\mathbf{0}$ $\\forall\\mathbf{w}\\in\\mathcal{L}$, kde $\\mathbf{r}_{new}=\\mathbf{r}_0-\\mathbf{A}\\boldsymbol{\\delta}$ je nové rezíduum. Toto je základný projekčný krok. \n",
     "\n",
@@ -2241,7 +2241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.3"
   },
   "varInspector": {
    "cols": {
