NUM update Feb 2026 (Extra points set to 1 per exercise; instructions removed).

--- a/Tema2/NUM_Tema2AproximaciaFunkcii.ipynb
+++ b/Tema2/NUM_Tema2AproximaciaFunkcii.ipynb
@@ -3115,7 +3115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=purple> EXTRA: Za detailné a správne odvodenie Newtonovej doprednej i spätnej formuly (z Poznámky 3) je možné získať dva bonusové body. </font> "
+    "<font color=purple> EXTRA: Za detailné a správne odvodenie Newtonovej doprednej i spätnej formuly (z Poznámky 3) je možné získať jeden bonusový bod. </font> "
    ]
   },
   {
@@ -3323,7 +3323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=purple> EXTRA: Za korektné odvodenie Barycentrickej formuly je možné získať 2 bonusové body. Trik spočíva vo vhodnom prepísaní Lagrangeovych bázických funkcií so zakomponovaním váh $w_i$ a v uvedomení si, že interpolačný polynóm interpoluje funkciu $f(x)=1$ presne. </font>"
+    "<font color=purple> EXTRA: Za korektné odvodenie Barycentrickej formule je možné získať 1 bonusový bod. Trik spočíva vo vhodnom prepísaní Lagrangeovych bázických funkcií so zakomponovaním váh $w_i$ a v uvedomení si, že interpolačný polynóm interpoluje funkciu $f(x)=1$ presne. </font>"
    ]
   },
   {
@@ -4955,7 +4955,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4969,7 +4969,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.11.4"
   },
   "varInspector": {
    "cols": {
