--- a/Tema5/NUM_Tema5NelinearneRovnice.ipynb
+++ b/Tema5/NUM_Tema5NelinearneRovnice.ipynb
@@ -1506,7 +1506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=purple> Extra: Overte, že splnenie Fourierovych podmienok zaručuje konvergenciu Newtonovej metódy. Za správne overenie je možné získať dva bonusové body. </font> "
+    "<font color=purple> Extra: Overte, že splnenie Fourierovych podmienok zaručuje konvergenciu Newtonovej metódy. Za správne overenie je možné získať jeden bonusový bod. </font> "
    ]
   },
   {
@@ -1918,7 +1918,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=purple> EXTRA: Naprogramujte (jednu) vybranú iteračnú metódu na riešenie nelineárnej rovnice tak, aby výsledkom bol interaktívny kód, kde bude možné nastaviť vstupné parametre, metódu odkrokovať a sledovať graficky, čo sa deje v jednotlivých iteráciách. V prípade korektného, okomentovaného kódu je možné získať 2 bonusové body. Za interaktívny kód pre každú ďalšiu metódu je možné získať po jednom bonusovom bode navyše. </font> "
+    "<font color=purple> EXTRA: Naprogramujte (jednu) vybranú iteračnú metódu na riešenie nelineárnej rovnice tak, aby výsledkom bol interaktívny kód, kde bude možné nastaviť vstupné parametre, metódu odkrokovať a sledovať graficky, čo sa deje v jednotlivých iteráciách. V prípade korektného, okomentovaného kódu je možné získať 1 bonusový bod. </font> "
    ]
   },
   {
@@ -1986,7 +1986,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2000,7 +2000,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.11.4"
   },
   "varInspector": {
    "cols": {
