--- a/Tema6/NUM_Tema6LinearneSystemy1.ipynb
+++ b/Tema6/NUM_Tema6LinearneSystemy1.ipynb
@@ -2607,7 +2607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=purple> EXTRA: Za efektívny interaktívny kód implementujúci GEM s čiastočným výberom pivota je možné získať dva bonusové body. Po spustení kódu by mal mať používateľ možnosť odkrokovať riešenie SLR s tým, že sa mu jednotlivé kroky a medzivýsledky budú priebežne zobrazovať. Nezabudnite ošetriť prípadné výnimky resp. kritické situácie, ktoré by mohli počas riešenia GEM nastať. </font> "
+    "<font color=purple> EXTRA: Za efektívny interaktívny kód implementujúci GEM s čiastočným výberom pivota je možné získať jeden bonusový bod. Po spustení kódu by mal mať používateľ možnosť odkrokovať riešenie SLR s tým, že sa mu jednotlivé kroky a medzivýsledky budú priebežne zobrazovať. Nezabudnite ošetriť prípadné výnimky resp. kritické situácie, ktoré by mohli počas riešenia GEM nastať. </font> "
    ]
   },
   {
@@ -2682,7 +2682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   },
   "varInspector": {
    "cols": {
