--- a/Tema7/NUM_Tema7LinearneSystemy2.ipynb
+++ b/Tema7/NUM_Tema7LinearneSystemy2.ipynb
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=purple> EXTRA: Zvoľte napr. $\\varepsilon=0.0005$ a v Python-e overte, či výpočet z Príkladu 1 skončí rovnakou iteráciou pre rôzne kritéria zastavenia (ukončenia iterácií). Za správne riešenie je možné získať dva bonusové body. </font>"
+    "<font color=purple> EXTRA: Zvoľte napr. $\\varepsilon=0.0005$ a v Python-e overte, či výpočet z Príkladu 1 skončí rovnakou iteráciou pre rôzne kritéria zastavenia (ukončenia iterácií). Za správne riešenie je možné získať jeden bonusový bod. </font>"
    ]
   },
   {
@@ -2227,7 +2227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2241,7 +2241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.4"
   },
   "varInspector": {
    "cols": {
