--- a/Tema8/NUM_Tema8VlastneCislaVektory.ipynb
+++ b/Tema8/NUM_Tema8VlastneCislaVektory.ipynb
@@ -1059,7 +1059,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=purple> EXTRA: Naprogramujte funkciu, ktorá vráti čísla podmienenosti pre jednotlivé vlastné hodnoty matice. Za správny, okomentovaný kód s testovacími príkladmi je možné získať dva bonusové body. </font>"
+    "<font color=purple> EXTRA: Naprogramujte funkciu, ktorá vráti čísla podmienenosti pre jednotlivé vlastné hodnoty matice. Za správny, okomentovaný kód s testovacími príkladmi je možné získať jeden bonusový body. </font>"
    ]
   },
   {
@@ -2244,7 +2244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   },
   "varInspector": {
    "cols": {
