--- a/Tema9/NUM_Tema9Optimalizacia.ipynb
+++ b/Tema9/NUM_Tema9Optimalizacia.ipynb
@@ -874,7 +874,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=purple> EXTRA: Za funkčnú implementáciu Brentovej metódy spolu s ilustračnými príkladmi a porovnaním s niektorou inou (predchádzajúcou) metódou, je možné získať tri bonusové body. </font>"
+    "<font color=purple> EXTRA: Za funkčnú implementáciu Brentovej metódy spolu s ilustračnými príkladmi a porovnaním s niektorou inou (predchádzajúcou) metódou, je možné získať jeden bonusový bod. </font>"
    ]
   },
   {
@@ -1537,7 +1537,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=purple> EXTRA: Odkrokujte výpočty z Príkladu 5 v Python-e. Overte, že hodnoty $[x_6,y_6]$ sú naozaj presné na šesť desatinných miest. Za správne riešenie je možné získať dva bonusové body. </font> "
+    "<font color=purple> EXTRA: Odkrokujte výpočty z Príkladu 5 v Python-e. Overte, že hodnoty $[x_6,y_6]$ sú naozaj presné na šesť desatinných miest. Za správne riešenie je možné získať jeden bonusový bod. </font> "
    ]
   },
   {
@@ -2457,7 +2457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=purple> EXTRA: Vykreslite graf funkcie $g(x) = \\sin(xy) + \\cos(x + y)$, $[x,y] \\in \\langle−1,2\\rangle \\times \\langle0,3\\rangle$. Aplikujte tri prístupy ako v Príklade 9 pre nájdenie lokálnych miním tejto funkcie. Experimentujte so štartovacími bodmi a prístupy porovnjate. Správne vyriešená úloha môže bytť ocenená dvoma bonusovými bodmi. </font> "
+    "<font color=purple> EXTRA: Vykreslite graf funkcie $g(x) = \\sin(xy) + \\cos(x + y)$, $[x,y] \\in \\langle−1,2\\rangle \\times \\langle0,3\\rangle$. Aplikujte tri prístupy ako v Príklade 9 pre nájdenie lokálnych miním tejto funkcie. Experimentujte so štartovacími bodmi a prístupy porovnjate. Správne vyriešená úloha môže byť ocenená jedným bonusovým bodom. </font> "
    ]
   },
   {
@@ -2484,7 +2484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=purple> EXTRA: Naprogramujte (jednu) vybranú iteračnú optimalizačnú metódu na hľadanie extrémov funkcie tak, aby výsledkom bol interaktívny kód, kde bude možné nastaviť vstupné parametre, metódu odkrokovať a sledovať graficky, čo sa deje v jednotlivých iteráciách. V prípade korektného, okomentovaného kódu je možné získať 2 bonusové body. Za interaktívny kód pre každú ďalšiu metódu je možné získať po jednom bonusovom bode navyše. </font> "
+    "<font color=purple> EXTRA: Naprogramujte (jednu) vybranú iteračnú optimalizačnú metódu na hľadanie extrémov funkcie tak, aby výsledkom bol interaktívny kód, kde bude možné nastaviť vstupné parametre, metódu odkrokovať a sledovať graficky, čo sa deje v jednotlivých iteráciách. V prípade korektného, okomentovaného kódu je možné získať 1 bonusový bod. </font> "
    ]
   },
   {
@@ -2552,7 +2552,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2566,7 +2566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.11.4"
   },
   "varInspector": {
    "cols": {
