--- a/Tema0/NUM_Tema0DoleziteDefinicieTvrdenia.ipynb
+++ b/Tema0/NUM_Tema0DoleziteDefinicieTvrdenia.ipynb
@@ -2826,7 +2826,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
