--- a/Tema4/NUM_Tema4NumerickeIntegrovanie.ipynb
+++ b/Tema4/NUM_Tema4NumerickeIntegrovanie.ipynb
@@ -824,7 +824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=purple> EXTRA: Naprogramujte (všeobecnú) funkciu pre približný výpočet integrálov pomocou uzavretých Newtonovych-Cotesovych vzorcov. Správny a okomentovaný kód, spolu s testovacími príkladmi môže byť odmenený 2 bonusovými bodmi. </font>"
+    "<font color=purple> EXTRA: Naprogramujte (všeobecnú) funkciu pre približný výpočet integrálov pomocou uzavretých Newtonovych-Cotesovych vzorcov. Správny a okomentovaný kód, spolu s testovacími príkladmi môže byť odmenený 1 bonusovým bodom. </font>"
    ]
   },
   {
@@ -2148,7 +2148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2162,7 +2162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.4"
   },
   "varInspector": {
    "cols": {
