--- a/Tema1/NUM_Tema1UvodNumerickeVypocty.ipynb
+++ b/Tema1/NUM_Tema1UvodNumerickeVypocty.ipynb
@@ -1048,7 +1048,7 @@
     "\n",
     "t. j. keď sa $\\tilde{x}$ líši od $x$ nanajvýš o 5 jednotiek rádu prislúchajúcemu k nasledujúcej cifre. Pokiaľ \\eqref{eq:decadSigDig} platí pre $k\\le p$ ale pre $k=p+1$ už neplatí, vtedy hovoríme, že $\\tilde{x}$ má $p$ **_platných cifier_**. Číslo $\\tilde{x}=\\pm d_1d_2d_3\\ldots d_p\\cdot10^e$, ktoré má všetkých $p$ cifier platných, je **_správne zaokrúhlenou hodnotou_** čísla $x$. \n",
     "\n",
-    "Ďalšie doplňujúce informácie k platných cifrám, ktoré sú v súlade s uvedenou definíciou \\eqref{eq:decadSigDig}, je možné nájsť napr. tu: [zdroj1](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/PlatneCisliceWikipedie.pdf), [zdroj2](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/significant-figures.pdf), [zdroj3](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/SignificantDigits.pdf). Kľúčové je ale uvažovať tzv. [vedeckú notáciu čísel](https://cs.wikipedia.org/wiki/V%C4%9Bdeck%C3%BD_z%C3%A1pis_%C4%8D%C3%ADsel) resp. [semi-logaritmický zápis](https://votruba.in/mat/semilog.pdf) (všetky číslice uvedené v tomto type zápisu sú automaticky platné, pričom predpokladáme, že prvá číslica je nenulová - podobne ako je to uvedené vyššie pri vzťahu \\eqref{eq:decadSigDig}). "
+    "Ďalšie doplňujúce informácie k platných cifrám, ktoré sú v súlade s uvedenou definíciou \\eqref{eq:decadSigDig}, je možné nájsť napr. tu: [zdroj1](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/PlatneCisliceWikipedie.pdf), [zdroj2](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/significant-figures.pdf), [zdroj3](https://github.com/gajdosandrej/NUM_redukcia/blob/main/DoplnujuceMaterialy/SignificantDigits.pdf). Kľúčové je ale uvažovať tzv. [vedeckú notáciu čísel](https://cs.wikipedia.org/wiki/V%C4%9Bdeck%C3%BD_z%C3%A1pis_%C4%8D%C3%ADsel) (všetky číslice uvedené v tomto type zápisu sú automaticky platné, pričom predpokladáme, že prvá číslica je nenulová - podobne ako je to uvedené vyššie pri vzťahu \\eqref{eq:decadSigDig}). "
    ]
   },
   {
@@ -1117,7 +1117,7 @@
     "\n",
     "potom pre rozdiely $z=y-x$, $\\tilde{z}=\\tilde{y}-\\tilde{x}$ dostávame \n",
     "\n",
-    "$$z=2.899 \\times 10^{-2}, \\quad \\tilde{z}=3 \\times 10^{-2}, \\quad |\\Delta z|=1.01 \\times 10^{-3}, \\quad \\left|\\dfrac{\\Delta z}{y}\\right|\\doteq 3.484 \\times 10^{-2},$$\n",
+    "$$z=2.899 \\times 10^{-2}, \\quad \\tilde{z}=3 \\times 10^{-2}, \\quad |\\Delta z|=1.01 \\times 10^{-3}, \\quad \\left|\\dfrac{\\Delta z}{z}\\right|\\doteq 3.484 \\times 10^{-2},$$\n",
     "\n",
     "takže $\\tilde{z}$ má len jednu platnú cifru, zatiaľ čo $\\tilde{x}$, $\\tilde{y}$ majú štyri platné cifry. \n",
     "\n",
@@ -1367,7 +1367,7 @@
    "source": [
     "V počítačoch vyvinutých po roku 1985 sa reálne čísla zobrazujú prakticky výhradne podľa tzv. štandardu IEEE (*The Institute of Electrical and Electronics Engineers*; *Standard for Binary Floating Point Arithmetic*) a to spravidla v týchto presnostiach: \n",
     "\n",
-    "a) **_Jednoduchá presnosť_** (anglicky *single precision*). Použijú sa $4$ bajty, t. j. $32$ bitov (viac napr. [tu](https://homel.vsb.cz/~hom50/INFORM/HWDDATA/HWDDATA.HTM)), z toho $23$ bitov pre mantisu, $8$ bitov pre exponent a $1$ bit pre znamienko mantisy. Keďže mantisa je normalizovaná, pre $x\\neq0$ je $d_1=0$. Táto cifra sa neukladá, preto je počet cifier mantisy $p=24$. Rozsah exponentu je $-126\\le e \\le 127$. Zobraziť je možné dekadické čísla s absolútnou hodnotou v rozsahu \n",
+    "a) **_Jednoduchá presnosť_** (anglicky *single precision*). Použijú sa $4$ bajty, t. j. $32$ bitov (viac napr. [tu](https://homel.vsb.cz/~hom50/INFORM/HWDDATA/HWDDATA.HTM)), z toho $23$ bitov pre mantisu, $8$ bitov pre exponent a $1$ bit pre znamienko mantisy. Keďže mantisa je normalizovaná, pre $x\\neq0$ je $d_1=1$. Táto cifra sa neukladá, preto je počet cifier mantisy $p=24$. Rozsah exponentu je $-126\\le e \\le 127$. Zobraziť je možné dekadické čísla s absolútnou hodnotou v rozsahu \n",
     "\n",
     "$$UFL=2^{-126}\\doteq1.2\\times10^{-38} \\qquad \\text{ až } \\qquad OFL=\\left(2-2^{-23}\\right)\\times2^{127}\\doteq3.4\\times10^{38}$$ \n",
     "\n",
