--- a/Tema3/NUM_Tema3NumerickeDerivovanie.ipynb
+++ b/Tema3/NUM_Tema3NumerickeDerivovanie.ipynb
@@ -729,7 +729,7 @@
    "metadata": {},
    "source": [
     "Pri numerickom výpočte derivácie hrá významnú úlohu aj zaokrúhľovacia chyba a to jednak v hodnotách funkcie $f$ (t.j. vo vstupných dátach) a jednak v samotnom vyčíslení vzorca (t.j. pri výpočte).  \n",
-    "Jeden z problémov numerického derivovania je ten, že zaokrúhľovacia chyba môže byť veľká pre malé $h$ (viď Príklad 2 hore). Totiž v počítači, $f(x_0+h)=\\tilde{f}(x_0+h)+e(x_0+h)$ a $f(x_0)=\\tilde{f}(x_0)+e(x_0)$, kde $e(x_0+h)$, $e(x_0)$ sú zaokrúhľovacie chyby pri výpočte $f(x_0+h)$ a $f(x_0)$, ktoré závisia od počtu (platných) číslic v počítači. \n",
+    "Jeden z problémov numerického derivovania je ten, že zaokrúhľovacia chyba môže byť veľká pre malé $h$ (viď Príklad 2 hore). Totiž v počítači, $\\tilde{f}(x_0+h)=f(x_0+h)+e(x_0+h)$ a $\\tilde{f}(x_0)=f(x_0)+e(x_0)$, kde $e(x_0+h)$, $e(x_0)$ sú zaokrúhľovacie chyby pri výpočte $f(x_0+h)$ a $f(x_0)$, ktoré závisia od počtu (platných) číslic v počítači. \n",
     "\n",
     "Uvažujme dopredný diferenčný vzorec \n",
     "\n",
@@ -1012,7 +1012,7 @@
     "a ďalšie prvky v tomto riadku počítame v súlade s \\eqref{eq:RichExtPowSerExp6} podľa predpisu \n",
     "\n",
     "\\begin{equation*} \\label{eq:RichExtTabSteps3} \\tag{18} \n",
-    "    T_{si}:=\\dfrac{4^iT_{s,i-1}-T_{s-1,i-1}}{4^i-1}=T_{s,i-1}+\\dfrac{T_{s,i-1}-T_{s-1,i-1}}{4^i-1}, \\quad s=1,2,\\ldots,s.  \n",
+    "    T_{si}:=\\dfrac{4^iT_{s,i-1}-T_{s-1,i-1}}{4^i-1}=T_{s,i-1}+\\dfrac{T_{s,i-1}-T_{s-1,i-1}}{4^i-1}, \\quad i=1,2,\\ldots,s.  \n",
     "\\end{equation*}\n",
     "\n",
     "Výpočet ukončíme a $T_{si}$ považujeme za dostatočne presnú aproximáciu pre $F(0)$, ak platí \n",
