--- a/Tema3/NUM_Tema3NumerickeDerivovanieUlohy.ipynb
+++ b/Tema3/NUM_Tema3NumerickeDerivovanieUlohy.ipynb
@@ -532,7 +532,7 @@
     "\n",
     "**b) Určte optimálne $h$ a minimálnu dosiahnuteľnú hranicu pre chybu.** \n",
     "\n",
-    "**c) S využitím uvedeného vzorca zostrojte podobnú tabuľku ako v Príklade 2 v učebnom texte.** \n",
+    "**c) S využitím uvedeného vzorca zostrojte pre funkciu $f(x)=\\ln(x)$ a bod $x_0=3$ podobnú tabuľku ako v Príklade 3 v učebnom texte.** \n",
     "\n",
     "**d) Porovnajte výsledky v tabuľke s optimálnym $h$ a s minimálnou dosiahnuteľnou chybou, ktoré ste zistili pred tým (v časti b) ).**\n"
    ]
@@ -846,7 +846,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -860,7 +860,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.10"
   },
   "varInspector": {
    "cols": {
